--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
                   secure.&nbsp;
                 </p>
                 <div style="text-align: center">
-                  <button
+                  <a
+                    href="bashupload/"
                     class="btn btn-primary"
-                    type="button"
                     style="background: var(--bs-red); text-align: left"
                   >
                     See details
-                  </button>
+                  </a>
                 </div>
               </div>
             </div>
