--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </p>
                 <div style="text-align: center">
                   <a
-                    href="bashupload/"
+                    href="bashupload/web/"
                     class="btn btn-primary"
                     style="background: var(--bs-red); text-align: left"
                   >
